--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,170 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&display=swap");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	padding: 0;
+	background-color: #f3f3f3;
+	font-family: "Quicksand", sans-serif;
+	color: #111;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+	box-sizing: border-box;
+}
+
+.container {
+	width: 1190px;
+	margin: 0 auto;
+	max-width: 100%;
+	padding: 0 15px;
+	overflow: hidden;
+	display: block;
+}
+
+main {
+	position: relative;
+}
+
+#crt-bg-shape-1 {
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: -1;
+}
+
+#crt-bg-shape-2 {
+	position: fixed;
+	top: 0;
+	right: 0;
+	z-index: -1;
+}
+
+a {
+	color: #111;
+}
+
+a:hover,
+a:active,
+a:focus {
+	color: #c0e3e7;
+}
+
+.section-title {
+	margin-top: 0;
+}
+
+.section-description {
+	font-size: 1rem;
+	line-height: 1.9rem;
+}
+
+.divider {
+	height: 1px;
+	border-width: 0;
+	color: #e0e0e0;
+	background-color: #e0e0e0;
+	margin: 30px 0;
+}
+
+.standard-list {
+	list-style: none;
+}
+
+.standard-list.small li {
+	font-size: 0.85rem;
+}
+
+.standard-list li::before {
+	content: "\2022";
+	color: #c0e3e7;
+	font-weight: bold;
+	display: inline-block;
+	width: 1rem;
+	margin-left: -1rem;
+}
+
+::-moz-selection {
+	background: #c0e3e7;
+}
+
+::selection {
+	background: #c0e3e7;
+}
+
+@-webkit-keyframes fadeInUp {
+	from {
+		opacity: 0;
+		-webkit-transform: translate3d(0, 100%, 0);
+		transform: translate3d(0, 100%, 0);
+	}
+
+	to {
+		opacity: 1;
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+}
+
+@keyframes fadeInUp {
+	from {
+		opacity: 0;
+		-webkit-transform: translate3d(0, 100%, 0);
+		transform: translate3d(0, 100%, 0);
+	}
+
+	to {
+		opacity: 1;
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+}
+
+.fadeInUp {
+	-webkit-animation-name: fadeInUp;
+	animation-name: fadeInUp;
+}
+
+@-webkit-keyframes pulse {
+	from {
+		-webkit-transform: scale3d(1, 1, 1);
+		transform: scale3d(1, 1, 1);
+	}
+
+	50% {
+		-webkit-transform: scale3d(1.05, 1.05, 1.05);
+		transform: scale3d(1.05, 1.05, 1.05);
+	}
+
+	to {
+		-webkit-transform: scale3d(1, 1, 1);
+		transform: scale3d(1, 1, 1);
+	}
+}
+
+@keyframes pulse {
+	from {
+		-webkit-transform: scale3d(1, 1, 1);
+		transform: scale3d(1, 1, 1);
+	}
+
+	50% {
+		-webkit-transform: scale3d(1.05, 1.05, 1.05);
+		transform: scale3d(1.05, 1.05, 1.05);
+	}
+
+	to {
+		-webkit-transform: scale3d(1, 1, 1);
+		transform: scale3d(1, 1, 1);
+	}
+}
+
+.pulse {
+	-webkit-animation-name: pulse;
+	animation-name: pulse;
+}
+
+@media print {
+	.animated {
+        opacity: 1!important;
+    }
 }
