--- a/src/components/UI/BubbleItem.module.css
+++ b/src/components/UI/BubbleItem.module.css
@@ -8,13 +8,14 @@
 	padding: 3px 4px;
 	font-size: 0.8rem;
 	text-transform: uppercase;
-	background-color: #c0e3e7;
+	background-color: var(--color-primary);
 	margin-right: 3px;
 	margin-bottom: 3px;
 	font-weight: 400;
 }
+
 .bubblesContainer span.basic {
-	background-color: #e1e1e1;
+	background-color: var(--color-bubble-basic);
     position: relative;
 }
 
@@ -28,7 +29,7 @@
 	width: auto;
     padding:  3px 5px;
     font-size: 0.8rem;
-    background-color: #e1e1e1;
+    background-color: var(--color-bubble-basic);
 	display: none;
     top: -25px;
     right: 0;
