--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,9 +1,9 @@
 .card {
-    background-color: #fff;
+    background-color: var(--color-bg-card);
     width: calc(100% - 320px);
     display: block;
     padding: 20px;
-    border: 1px solid #e1e1e1;
+    border: 1px solid var(--color-base-border);
     margin: 0 0 20px 320px;
     box-sizing: border-box;
 }
