--- a/src/components/UI/ExperienceItem.module.css
+++ b/src/components/UI/ExperienceItem.module.css
@@ -10,7 +10,7 @@
 }
 
 .experience .date {
-	background-color: #c0e3e7;
+	background-color: var(--color-primary);
 	margin-left: 0;
 	margin-right: 22px;
 	padding: 0 6px;
@@ -38,7 +38,7 @@
 	height: 0;
 	border-top: 16px solid transparent;
 	border-bottom: 16px solid transparent;
-	border-left: 16px solid #c0e3e7;
+	border-left: 16px solid var(--color-primary);
 	position: absolute;
 }
 
@@ -56,7 +56,7 @@
 	width: 4px;
 	height: 4px;
 	border-radius: 50%;
-	background-color: #333;
+	background-color: var(--color-foreground);
 	z-index: 2;
 }
 
@@ -68,7 +68,7 @@
 	bottom: 0;
 	width: 1px;
 	opacity: 0.5;
-	background-color: #c0e3e7;
+	background-color: var(--color-primary);
 	z-index: 1;
 }
 
@@ -85,7 +85,7 @@
 
 .experience .experienceInfo .company {
 	font-size: 0.9rem;
-	color: #333;
+	color: var(--color-foreground-secondary);
 	display: inline-block;
 	margin-bottom: 0;
 	margin-top: 0;
