--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -3,7 +3,7 @@
 	top: 20vh;
 	left: 5%;
 	width: 90%;
-	background-color: white;
+	background-color: var(--color-grey-darker);;
 	padding: 1rem;
 	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 	z-index: 30;
@@ -21,7 +21,7 @@
 	right: -16px;
 	width: 40px;
 	height: 40px;
-	background-color: #c0e3e7;
+	background-color: var(--color-primary);
 	font-size: 1.6rem;
 	cursor: pointer;
 	text-align: center;
@@ -32,7 +32,7 @@
 .modal .content .closeButton:hover,
 .modal .content .closeButton:focus,
 .modal .content .closeButton:active {
-	background-color: #e1e1e1;
+	background-color: var(--color-button-hover);
 }
 
 @media (min-width: 768px) {
