--- a/src/components/User/UserWidget.module.css
+++ b/src/components/User/UserWidget.module.css
@@ -8,9 +8,9 @@
 }
 
 .widgetContainer .widget {
-	box-shadow: -4px 7px 15px 1px rgb(0 0 0 / 20%);
 	width: 290px;
-	background-color: #c0e3e7;
+    border: 1px solid var(--color-base-border);
+	background-color: var(--color-primary);
 	box-sizing: border-box;
 	text-align: center;
 	top: 40px;
@@ -44,7 +44,7 @@
 
 .widgetContainer .widget .widgetActions {
 	padding: 15px;
-	background-color: white;
+	background-color: var(--color-bg-action);
 	text-align: center;
 	position: relative;
 }
@@ -63,11 +63,20 @@
 .widgetContainer .widget .widgetActions select {
 	position: absolute;
 	top: 0;
-	right: 0;
 	border: none;
 	cursor: pointer;
-	background-color: #c0e3e7;
+	background-color: var(--color-primary);
+    color: var(--color-foreground);
 }
+
+.widgetContainer .widget .widgetActions select.langSelect {
+	right: 0;
+}
+
+.widgetContainer .widget .widgetActions select.modeSelect {
+	left: 0;
+}
+
 
 @media (max-width: 991px) {
 	.widgetContainer {
