--- a/src/components/Layout/Header/Menu.module.css
+++ b/src/components/Layout/Header/Menu.module.css
@@ -16,7 +16,7 @@
 	margin: 0 5px;
 }
 
-.menu li span {
+.menu li:not(.closeMobile) span {
 	padding: 5px 15px;
 	font-weight: 500;
 	cursor: pointer;
@@ -42,6 +42,7 @@
 		display: block;
 		cursor: pointer;
 		font-size: 1rem;
+        margin: 0;
 		float: left;
 		background-color: var(--color-primary);
 		padding: 4px;
@@ -57,7 +58,6 @@
 	.menu.open {
 		right: 0;
 	}
-
 	.menu li {
 		display: block;
 		margin: 5px;
