--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -3,7 +3,7 @@
 	top: 20vh;
 	left: 5%;
 	width: 90%;
-	background-color: var(--color-grey-darker);;
+	background-color: var(--color-background);;
 	padding: 1rem;
 	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 	z-index: 30;
