--- a/src/components/User/UserWidget.module.css
+++ b/src/components/User/UserWidget.module.css
@@ -4,12 +4,12 @@
 	right: 0;
 	left: 0;
 	bottom: 0;
-    width: 290px;
+	width: 290px;
 }
 
 .widgetContainer .widget {
 	width: 290px;
-    border: 1px solid var(--color-base-border);
+	border: 1px solid var(--color-base-border);
 	background-color: var(--color-primary);
 	box-sizing: border-box;
 	text-align: center;
@@ -60,23 +60,18 @@
 	display: block;
 }
 
-.widgetContainer .widget .widgetActions select {
-	position: absolute;
-	top: 0;
+.widgetContainer .widget .widgetActions .widgetSelect {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.widgetContainer .widget .widgetActions .widgetSelect select {
 	border: none;
 	cursor: pointer;
 	background-color: var(--color-primary);
-    color: var(--color-foreground);
+	color: var(--color-foreground);
 }
-
-.widgetContainer .widget .widgetActions select.langSelect {
-	right: 0;
-}
-
-.widgetContainer .widget .widgetActions select.modeSelect {
-	left: 0;
-}
-
 
 @media (max-width: 991px) {
 	.widgetContainer {
@@ -85,12 +80,12 @@
 		right: auto;
 		left: auto;
 		bottom: auto;
-        width: 100%;
+		width: 100%;
 	}
 
 	.widgetContainer .widget {
 		width: 100%;
-        margin-top: 15px;
+		margin-top: 15px;
 	}
 
 	.widgetContainer .widget.sticky {
@@ -100,7 +95,10 @@
 }
 
 @media print {
+	.widgetContainer .widget .widgetInfo img.avatar {
+		display: none;
+	}
 	.widgetContainer .widget .widgetActions {
-		display: none!important;
+		display: none !important;
 	}
 }
